<resources>
    <string name="app_name">PopularLibraries</string>
    <string name="tv_one_text">TextOne</string>
    <string name="button_one_text">1st Button</string>
    <string name="tv_two_text">TextTwo</string>
    <string name="button_two_text">2nd Button</string>
    <string name="tv_three_text">Text Three</string>
    <string name="button_three_text">3rd Button</string>
    <string name="user_name_text">User Name</string>
</resources>